# proto/proto/sys_apis_model.pb.go
@@ -30,27 +30,34 @@ const _ = proto.ProtoPackageIsVersion4
 
 type Timestamp = timestamppb.Timestamp
 
+// 注意1、字段必须是小写，要不然http转换rpc，inject_tag json也没用
+// 注意2、google.protobuf.Timestamp  在xxx.micro.go中没用用到，需要删除，要不然服务启动不起来
+// 注意3、要记得生成注解 protoc-go-inject-tag -input=./proto/sys_api_model.pb.go
+// protoc --go_out=plugins=grpc:. --micro_out=plugins=grpc:. --go-grpc_out=. --swagger_out=logtostderr=true:./proto --grpc-gateway_out=logtostderr=true:./proto sys_api_model.proto
+// protoc --go_out=plugins=grpc:. --swagger_out=./proto --grpc-gateway_out=./proto sys_api_service.proto
+// protoc --go_out=plugins=grpc:. sys_apis_model.proto
+// protoc --go_out=plugins=grpc:. --swagger_out=./proto --grpc-gateway_out=./proto sys_apis_service.proto
 type SysApis struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	// @inject_tag: json:"id" gorm:"primary_key;AUTO_INCREMENT;default:;comment:;size:20;"
-	Id int64 `protobuf:"varint,100,opt,name=id,proto3" json:"id,omitempty"`
-	// @inject_tag: json:"created_at" gorm:"default:;comment:;"
-	CreatedAt *timestamppb.Timestamp `protobuf:"bytes,101,opt,name=created_at,json=createdAt,proto3" json:"created_at,omitempty"`
-	// @inject_tag: json:"updated_at" gorm:"default:;comment:;"
-	UpdatedAt *timestamppb.Timestamp `protobuf:"bytes,102,opt,name=updated_at,json=updatedAt,proto3" json:"updated_at,omitempty"`
-	// @inject_tag: json:"deleted_at" gorm:"default:;comment:;"
-	DeletedAt *timestamppb.Timestamp `protobuf:"bytes,103,opt,name=deleted_at,json=deletedAt,proto3" json:"deleted_at,omitempty"`
-	// @inject_tag: json:"path" gorm:"default:api路径;comment:api路径;size:191;"
-	Path string `protobuf:"bytes,104,opt,name=path,proto3" json:"path,omitempty"`
-	// @inject_tag: json:"description" gorm:"default:api中文描述;comment:api中文描述;size:191;"
-	Description string `protobuf:"bytes,105,opt,name=description,proto3" json:"description,omitempty"`
-	// @inject_tag: json:"api_group" gorm:"default:api组;comment:api组;size:191;"
-	ApiGroup string `protobuf:"bytes,106,opt,name=api_group,json=apiGroup,proto3" json:"api_group,omitempty"`
-	// @inject_tag: json:"method" gorm:"default:;comment:;size:191;"
-	Method string `protobuf:"bytes,107,opt,name=method,proto3" json:"method,omitempty"`
+	// @inject_tag: gorm:"primary_key;AUTO_INCREMENT"
+	Id int64 `protobuf:"varint,101,opt,name=id,proto3" json:"id,omitempty"`
+	// @inject_tag: json:"path" gorm:"comment:api路径"
+	Path string `protobuf:"bytes,102,opt,name=path,proto3" json:"path,omitempty"`
+	// @inject_tag: json:"description" gorm:"comment:api中文描述"
+	Description string `protobuf:"bytes,103,opt,name=description,proto3" json:"description,omitempty"`
+	// @inject_tag: json:"apiGroup" gorm:"comment:api组"
+	ApiGroup string `protobuf:"bytes,104,opt,name=apiGroup,proto3" json:"apiGroup,omitempty"`
+	// @inject_tag: json:"method" gorm:"default:POST" gorm:"comment:方法"
+	Method string `protobuf:"bytes,105,opt,name=method,proto3" json:"method,omitempty"`
+	// @inject_tag: json:"createAt"
+	CreatedAt *timestamppb.Timestamp `protobuf:"bytes,106,opt,name=createdAt,proto3" json:"createdAt,omitempty"`
+	// @inject_tag: json:"updateAt"
+	UpdatedAt *timestamppb.Timestamp `protobuf:"bytes,107,opt,name=updatedAt,proto3" json:"updatedAt,omitempty"`
+	// @inject_tag: gorm:"index" json:"-"
+	DeletedAt *timestamppb.Timestamp `protobuf:"bytes,108,opt,name=deletedAt,proto3" json:"deletedAt,omitempty"`
 }
 
 func (x *SysApis) Reset() {
@@ -92,27 +99,6 @@ func (x *SysApis) GetId() int64 {
 	return 0
 }
 
-func (x *SysApis) GetCreatedAt() *timestamppb.Timestamp {
-	if x != nil {
-		return x.CreatedAt
-	}
-	return nil
-}
-
-func (x *SysApis) GetUpdatedAt() *timestamppb.Timestamp {
-	if x != nil {
-		return x.UpdatedAt
-	}
-	return nil
-}
-
-func (x *SysApis) GetDeletedAt() *timestamppb.Timestamp {
-	if x != nil {
-		return x.DeletedAt
-	}
-	return nil
-}
-
 func (x *SysApis) GetPath() string {
 	if x != nil {
 		return x.Path
@@ -141,6 +127,27 @@ func (x *SysApis) GetMethod() string {
 	return ""
 }
 
+func (x *SysApis) GetCreatedAt() *timestamppb.Timestamp {
+	if x != nil {
+		return x.CreatedAt
+	}
+	return nil
+}
+
+func (x *SysApis) GetUpdatedAt() *timestamppb.Timestamp {
+	if x != nil {
+		return x.UpdatedAt
+	}
+	return nil
+}
+
+func (x *SysApis) GetDeletedAt() *timestamppb.Timestamp {
+	if x != nil {
+		return x.DeletedAt
+	}
+	return nil
+}
+
 var File_sys_apis_model_proto protoreflect.FileDescriptor
 
 var file_sys_apis_model_proto_rawDesc = []byte{
@@ -148,28 +155,27 @@ var file_sys_apis_model_proto_rawDesc = []byte{
 	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x12, 0x08, 0x73, 0x79, 0x73, 0x5f, 0x61, 0x70, 0x69, 0x73,
 	0x1a, 0x1f, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2f, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75,
 	0x66, 0x2f, 0x74, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x2e, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x22, 0xb5, 0x02, 0x0a, 0x07, 0x53, 0x79, 0x73, 0x41, 0x70, 0x69, 0x73, 0x12, 0x0e, 0x0a,
-	0x02, 0x69, 0x64, 0x18, 0x64, 0x20, 0x01, 0x28, 0x03, 0x52, 0x02, 0x69, 0x64, 0x12, 0x39, 0x0a,
-	0x0a, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x5f, 0x61, 0x74, 0x18, 0x65, 0x20, 0x01, 0x28,
-	0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f,
-	0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x09, 0x63,
-	0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x39, 0x0a, 0x0a, 0x75, 0x70, 0x64, 0x61,
-	0x74, 0x65, 0x64, 0x5f, 0x61, 0x74, 0x18, 0x66, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67,
-	0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54,
-	0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x09, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65,
-	0x64, 0x41, 0x74, 0x12, 0x39, 0x0a, 0x0a, 0x64, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x64, 0x5f, 0x61,
-	0x74, 0x18, 0x67, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65,
-	0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74,
-	0x61, 0x6d, 0x70, 0x52, 0x09, 0x64, 0x65, 0x6c, 0x65, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x12,
-	0x0a, 0x04, 0x70, 0x61, 0x74, 0x68, 0x18, 0x68, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x70, 0x61,
-	0x74, 0x68, 0x12, 0x20, 0x0a, 0x0b, 0x64, 0x65, 0x73, 0x63, 0x72, 0x69, 0x70, 0x74, 0x69, 0x6f,
-	0x6e, 0x18, 0x69, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x64, 0x65, 0x73, 0x63, 0x72, 0x69, 0x70,
-	0x74, 0x69, 0x6f, 0x6e, 0x12, 0x1b, 0x0a, 0x09, 0x61, 0x70, 0x69, 0x5f, 0x67, 0x72, 0x6f, 0x75,
-	0x70, 0x18, 0x6a, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x61, 0x70, 0x69, 0x47, 0x72, 0x6f, 0x75,
-	0x70, 0x12, 0x16, 0x0a, 0x06, 0x6d, 0x65, 0x74, 0x68, 0x6f, 0x64, 0x18, 0x6b, 0x20, 0x01, 0x28,
-	0x09, 0x52, 0x06, 0x6d, 0x65, 0x74, 0x68, 0x6f, 0x64, 0x42, 0x0d, 0x5a, 0x0b, 0x70, 0x72, 0x6f,
-	0x74, 0x6f, 0x3b, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x50, 0x00, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x33,
+	0x6f, 0x22, 0xb1, 0x02, 0x0a, 0x07, 0x53, 0x79, 0x73, 0x41, 0x70, 0x69, 0x73, 0x12, 0x0e, 0x0a,
+	0x02, 0x69, 0x64, 0x18, 0x65, 0x20, 0x01, 0x28, 0x03, 0x52, 0x02, 0x69, 0x64, 0x12, 0x12, 0x0a,
+	0x04, 0x70, 0x61, 0x74, 0x68, 0x18, 0x66, 0x20, 0x01, 0x28, 0x09, 0x52, 0x04, 0x70, 0x61, 0x74,
+	0x68, 0x12, 0x20, 0x0a, 0x0b, 0x64, 0x65, 0x73, 0x63, 0x72, 0x69, 0x70, 0x74, 0x69, 0x6f, 0x6e,
+	0x18, 0x67, 0x20, 0x01, 0x28, 0x09, 0x52, 0x0b, 0x64, 0x65, 0x73, 0x63, 0x72, 0x69, 0x70, 0x74,
+	0x69, 0x6f, 0x6e, 0x12, 0x1a, 0x0a, 0x08, 0x61, 0x70, 0x69, 0x47, 0x72, 0x6f, 0x75, 0x70, 0x18,
+	0x68, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x61, 0x70, 0x69, 0x47, 0x72, 0x6f, 0x75, 0x70, 0x12,
+	0x16, 0x0a, 0x06, 0x6d, 0x65, 0x74, 0x68, 0x6f, 0x64, 0x18, 0x69, 0x20, 0x01, 0x28, 0x09, 0x52,
+	0x06, 0x6d, 0x65, 0x74, 0x68, 0x6f, 0x64, 0x12, 0x38, 0x0a, 0x09, 0x63, 0x72, 0x65, 0x61, 0x74,
+	0x65, 0x64, 0x41, 0x74, 0x18, 0x6a, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f,
+	0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d,
+	0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x09, 0x63, 0x72, 0x65, 0x61, 0x74, 0x65, 0x64, 0x41,
+	0x74, 0x12, 0x38, 0x0a, 0x09, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x18, 0x6b,
+	0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72,
+	0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70,
+	0x52, 0x09, 0x75, 0x70, 0x64, 0x61, 0x74, 0x65, 0x64, 0x41, 0x74, 0x12, 0x38, 0x0a, 0x09, 0x64,
+	0x65, 0x6c, 0x65, 0x74, 0x65, 0x64, 0x41, 0x74, 0x18, 0x6c, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a,
+	0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66,
+	0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x09, 0x64, 0x65, 0x6c, 0x65,
+	0x74, 0x65, 0x64, 0x41, 0x74, 0x42, 0x0d, 0x5a, 0x0b, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x3b, 0x70,
+	0x72, 0x6f, 0x74, 0x6f, 0x50, 0x00, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -190,9 +196,9 @@ var file_sys_apis_model_proto_goTypes = []interface{}{
 	(*timestamppb.Timestamp)(nil), // 1: google.protobuf.Timestamp
 }
 var file_sys_apis_model_proto_depIdxs = []int32{
-	1, // 0: sys_apis.SysApis.created_at:type_name -> google.protobuf.Timestamp
-	1, // 1: sys_apis.SysApis.updated_at:type_name -> google.protobuf.Timestamp
-	1, // 2: sys_apis.SysApis.deleted_at:type_name -> google.protobuf.Timestamp
+	1, // 0: sys_apis.SysApis.createdAt:type_name -> google.protobuf.Timestamp
+	1, // 1: sys_apis.SysApis.updatedAt:type_name -> google.protobuf.Timestamp
+	1, // 2: sys_apis.SysApis.deletedAt:type_name -> google.protobuf.Timestamp
 	3, // [3:3] is the sub-list for method output_type
 	3, // [3:3] is the sub-list for method input_type
 	3, // [3:3] is the sub-list for extension type_name
